--- a/views/single.ejs
+++ b/views/single.ejs
@@ -161,8 +161,8 @@
         </div>
     </div>
     <aside class="tab-pane" id="gallery" style="float: right">
-        <div id="photos">
-            <ul id="photo-gallery">
+        <div id="photos1" style='overflow:auto; width:400px;height:400px;'>
+            <ul id="photo-aff">
                 <li>
                     <% if(locals.files_img != ""){ %>
                         <% for (let i = 0; i < locals.files_img.length; i++) { /*locals.files_img.forEach(function(el, index){ */ %>
