securisation url chat//css chat//Fix error if no front-like

--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -539,6 +539,8 @@ body {
 }
 #frame .content .contact-profile p {
   float: left;
+  margin-left: 1.1em;
+  font-weight: bold;
 }
 #frame .content .contact-profile .social-media {
   float: right;
