--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -120,7 +120,7 @@
                     <li  class="contact">
                        <div  class="wrap">
                            <span class="contact-status online"></span>
-                           <img id="profilimg" src="/assets/img/<%= res.username%><%= res.user_id%>profil.png" alt="" />
+                           <img id="profilimg" src="" alt="" />
                            <div class="meta">
                                <p class="name"><%= res.username %></p>
                                <p class="preview"></p>
@@ -137,7 +137,6 @@
 	</div>
 	<div class="content">
 		<div class="contact-profile">
-			<img  src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
 			<p id="Userto"><%= locals.link%></p>
 			<div class="social-media">
 				<i class="fa fa-facebook" aria-hidden="true"></i>
