--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -151,10 +151,18 @@
 		</div>
 		<div class="message-input">
 			<div class="wrap">
-			<input type="text" placeholder="Write your message..." id="message"/>
+            <% if(locals.bloquer == 1){ %>
+			<input type="text" placeholder="L'utilisateur vous a bloqué" id="message" disabled/>
+            <% }else { %>
+            <input type="text" placeholder="Write your message..." id="message"/>
+            <% } %>
 			<i class="fa fa-paperclip attachment" aria-hidden="true"></i>
-			<button id="send" class="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-			</div>
+            <% if(locals.bloquer == 1){ %>
+			<button id="send" class="submit bloquer" disabled><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+            <% }else { %>
+            <button id="send" class="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+            <% } %>
+            </div>
 		</div>
 	</div>
 </div>
