--- a/views/single.ejs
+++ b/views/single.ejs
@@ -135,10 +135,11 @@
                 </table>
                 <p><%= locals.user.bio %></p>
             </div>
+            <%= locals.user.username%>
             <div id="wrapper">
                 <button class="btn2 btn-2 btn2-2b" id="report" type="button" value="report" name="report">report</button>
                 <button id="bloque_btn" class="btn2 btn-2 btn2-2b" type="submit"><%=locals.bloqued%></button>
-                <form action="/score?<%= locals.user.username %>" method="post">
+                <form action="/score?<%= locals.username %>" method="post">
                     <p class="clasificacion">
                         <input id="radio1" type="radio" name="etoile"
                                value="5" <%= locals.etoiles == 5 ? checked = "checked" : "" %>>
