fix script js recherche.ejs

--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -276,4 +276,6 @@
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script src="/node_modules/js-cookie/src/js.cookie.js" language="JavaScript"></script>
+<script src="/assets/js/recherche.js" language="JavaScript"></script>
+<script src="/assets/js/notif.js" language="JavaScript"></script>
 </html>
