--- a/public/assets/css/notif.css
+++ b/public/assets/css/notif.css
@@ -109,6 +109,27 @@ button:hover {
     text-align: left;
 }
 
+@media screen and (max-width: 825px) {
+  .notif_box {
+      opacity: 0;
+      position: absolute;
+      background-color: #fff;
+      border: 0px solid white;
+      border-radius: 0.5em;
+      top: 5.2em;
+      left: 12%;
+      width: 44%;
+      height: 183px;
+      max-width: 232px;
+      z-index: 1;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      overflow-y: scroll;
+      overflow-x: hidden;
+      transition: opacity 0.5s;
+      text-align: left;
+  }
+}
+
 .notif_box::-webkit-scrollbar {
   width: 8px;
   background: transparent;
