--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,6 +2,7 @@
 <html class=''>
 <head>
   <meta name="robots" content="noindex">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <!-- <script src="/assets/js/jquery-1.11.1.min.js"></script> -->
