--- a/views/validation.ejs
+++ b/views/validation.ejs
@@ -62,5 +62,5 @@
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
 <script src="/node_modules/js-cookie/src/js.cookie.js" language="JavaScript"></script>
-<script src="/assets/js/login.js" language="JavaScript"></script>
+<!--<script src="/assets/js/login.js" language="JavaScript"></script>-->
 </html>
